[tool.poetry]
name = "pybr"
version = "0.1.0"
description = ""
authors = ["Marco Rougeth <marco@rougeth.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"
google-api-python-client = "^1.11.0"
google-auth-httplib2 = "^0.0.4"
google-auth-oauthlib = "^0.4.1"

[tool.poetry.dev-dependencies]
ipython = "^7.18.0"
ipdb = "^0.13.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
